--- a/holy-grail-layout/style.css
+++ b/holy-grail-layout/style.css
@@ -46,6 +46,39 @@ body {
     padding-bottom: 3rem;
 }
 
+nav {
+    font-size: 2rem;
+    background-color:blue;
+}
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    /* justify-content: space-around; */
+}
+
+nav ul li {
+    cursor: pointer;
+    padding: 0.5rem;
+    flex: auto;
+    text-align: center;
+}
+
+nav ul li:hover {
+    background-color: #555;
+    color:black;
+}
+
+@media all and (max-width: 400px) {
+    nav ul {
+        flex-direction: column;
+    }
+    nav ul li {
+        text-align: center;
+    }
+}
+
 @media all and (max-width: 540px) {
     .flex-main {
         flex-direction: column;
